// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot - empty fulfillment options 1`] = `
Array [
  .c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
}

<h3
    className="c0"
  >
    2
    . 
    Choose a shipping method
  </h3>,
  "",
  .c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
}

<span
    className="c0"
  >
    No fulfillment methods
  </span>,
]
`;

exports[`basic snapshot 1`] = `
Array [
  .c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 18px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.25;
}

<h3
    className="c0"
  >
    2
    . 
    Choose a shipping method
  </h3>,
  "",
  <div
    className={null}
    style={Object {}}
  >
    SelectableList({"isBordered":true,"isSaving":false,"name":"selectedFulfillmentOptionId","options":"[Object]"})
  </div>,
]
`;
